tests/netedit/basic/configs/netecfg/load/invalid/demands/log.netedit
Error: Cannot read file 'C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\demands\dummy.rou.xml'!
Error: Loading of C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\demands\dummy.rou.xml failed.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
